fix transparent color bug on Firefox

--- a/client/styles/elements/button.scss
+++ b/client/styles/elements/button.scss
@@ -91,8 +91,8 @@
     }
 }
 .submit {
-    background-color: hsla(54, 93%, 47%, 0.5);
-    border: 1px solid hsla(54, 93%, 47%, 0.2);
+    background-color: rgba(231, 209, 8, 0.5);
+    border: 1px solid rgba(231, 209, 8, 0.2);
 }
 .reset {
     border: 1px solid rgb(230, 207, 3);
